<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/product_image" />

    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/productImage"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/minusButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/remove_from_cart"
            android:src="@drawable/ic_minus" />

        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:gravity="center"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/add_to_cart"
            android:src="@drawable/ic_plus" />
    </LinearLayout>

    <TextView
        android:id="@+id/productName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantityLayout"
        android:layout_alignParentStart="true"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="-25dp"
        android:layout_toStartOf="@id/productImage"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/product_name"
        android:textColor="@color/black"
        android:textSize="18sp" />
</RelativeLayout>
