<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayoutLogin" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="38dp"
            android:tint="@null"
            android:src="@drawable/ic_action_settings"
            app:backgroundTint="@color/background_icon" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_speakeasy"
            android:textColor="@color/loginActivity_title"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/login_plsSignIn"
            android:textColor="@color/loginActivity_title"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="20dp"
            android:gravity="center"
            android:hint="@string/login_username"
            android:textColorHint="@color/hints_login"
            android:textColor="@color/loginActivity_fields" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:padding="20dp"
            android:gravity="center"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="@color/hints_login"
            android:textColor="@color/loginActivity_fields" />

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/login_rmb"
            android:textColor="@color/loginActivity_fields"
            android:textSize="20sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:cardCornerRadius="70dp"
            app:cardElevation="4dp"
            android:layout_marginTop="20dp">


            <Button
                android:id="@+id/login_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/loginActivity_button_background"
                android:padding="8dp"
                android:text="@string/login_signIn"
                android:textColor="@color/loginActivity_button_text"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/dnthave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/login_dnt"
            android:textColor="@color/loginActivity_button_text"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_signUp"
            android:textColor="@color/loginActivity_button_text"
            android:textSize="20sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>