<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <!-- Product Image -->
    <ImageView
        android:id="@+id/productImage"
        android:layout_width="120dp"
        android:layout_height="120dp" />

    <!-- Product Name -->
    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        android:textColor="@color/black" />

    <!-- Quantity, Minus, and Plus Buttons in a Horizontal Layout under the Product Name -->
    <LinearLayout
        android:id="@+id/quantityLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/productName"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <!-- Minus Button as ImageView -->
        <ImageView
            android:id="@+id/minusButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_minus"
            android:contentDescription="@string/remove_from_cart"
            android:elevation="4dp" />

        <!-- Product Quantity TextView -->
        <TextView
            android:id="@+id/productQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:gravity="center"
            android:text="@string/itemQuantity"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <!-- Plus Button as ImageView -->
        <ImageView
            android:id="@+id/plusButton"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_plus"
            android:contentDescription="@string/add_to_cart"
            android:elevation="4dp" />

    </LinearLayout>

</RelativeLayout>
