<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <LinearLayout
        android:id="@+id/settingsPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/settingsContainer"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:background="@color/light_grey"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_back"
                android:background="?android:attr/selectableItemBackground"
                android:padding="16dp"
                android:contentDescription="Back" />

            <TextView
                android:id="@+id/settingsTitle"
                android:layout_width="match_parent"
                android:layout_height="77dp"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/Settings_settings_title"
                android:textSize="24sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/server_address_edittext"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:hint="@string/settings_enter_server_address" />

            <Button
                android:id="@+id/saveSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/settings_server_address" />


            <Switch
                android:id="@+id/darkModeSwitch"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:padding="30dp"
                android:textColor="@color/black"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
