<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sign_up.ContactInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/contactInfoPage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/contactInfoContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:background="@color/Sign_up_container"
                android:orientation="vertical"
                android:padding="20dp">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_profile_image"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="75dp"
                    app:cardElevation="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    >

                    <ImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/Sign_up_text_color"
                    android:text="@string/ContactInfo_contact_info"
                    android:textSize="35sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/contactInfoForm"
                    android:layout_marginTop="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/contact_info"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/Sign_up_text_color"
                        android:text="@string/ContactInfo_Contact_info"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:gravity="center"
                        android:hint="@string/ContactInfo_mail"
                        android:minHeight="48dp"
                        android:padding="20dp"
                        android:textColor="@color/Sign_up_text_color"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:hint="@string/ContactInfo_phone"
                        android:minHeight="48dp"
                        android:gravity="center"
                        android:padding="20dp"
                        android:textColor="@color/Sign_up_text_color"
                        android:textSize="15sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fieldBtns"
                    android:layout_width="match_parent"
                    android:layout_height="157dp"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="137dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/buttonPrev"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            android:background="@color/Sign_up_button"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:text="@string/SignUp_prev"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/buttonNext"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:layout_weight="1"
                            android:background="@color/Sign_up_button"
                            android:paddingStart="15dp"
                            android:paddingEnd="25dp"
                            android:text="@string/SignUp_next"
                            android:textColor="#000000"
                            android:textSize="18sp" />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
